<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.ideamos.web.questionit.views.Login">

    <LinearLayout
        android:id="@+id/layout_toolbar"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:id="@+id/lbl_title"
            android:text="@string/title_login"
            android:textSize="24sp"
            android:textColor="@color/icons"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight=".80"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:paddingBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txt_email"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email"
                android:textSize="22sp"
                android:textColor="@color/icons"
                android:textColorHighlight="@color/icons"
                android:layout_centerInParent="true"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txt_password"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:textSize="22sp"
                android:textColor="@color/icons"
                android:textColorHighlight="@color/icons"
                android:layout_centerInParent="true"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <com.andexert.library.RippleView
            android:id="@+id/but_next"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            rv_centered="true">
            <ImageView
                android:contentDescription="@string/app_name"
                android:src="@drawable/circle_next_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.andexert.library.RippleView>
        <TextView
            android:id="@+id/lbl_forgot_password"
            android:text="@string/login_forgot_password"
            android:textSize="18sp"
            android:textColor="@color/icons"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/but_login_facebook"
            android:text="@string/loign_with_facebook"
            android:textSize="22sp"
            android:textColor="@color/icons"
            android:textAllCaps="false"
            android:background="@drawable/but_pressed"
            android:drawableLeft="@drawable/ic_facebook"
            android:drawablePadding="-10sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="340dp"
            android:layout_height="match_parent" />
    </LinearLayout>

</RelativeLayout>
