<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        app:layout_widthPercent="70%"
        app:layout_heightPercent="10%"
        android:elevation="4dp"
        android:padding="8dp"
        android:gravity="center|left"
        android:background="@color/shadow"
        android:text="@string/update_first_name"
        android:textSize="18sp"
        android:textColor="@color/icons"
        android:layout_width="0dp"
        android:layout_height="0dp" />
    <ImageView
        android:id="@+id/img_avatar_profile"
        android:contentDescription="@string/app_title"
        android:src="@drawable/com_facebook_profile_picture_blank_square"
        android:scaleType="centerCrop"
        app:layout_heightPercent="60%"
        app:layout_widthPercent="70%"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <LinearLayout
        app:layout_heightPercent="12%"
        app:layout_widthPercent="70%"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:layout_below="@+id/img_avatar_profile"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/img_question"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_next_white"
            android:scaleType="fitCenter"
            android:layout_weight=".50"
            android:layout_width="0dp"
            android:layout_height="50dp" />
        <ImageView
            android:id="@+id/img_answer"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_edit_white"
            android:scaleType="fitCenter"
            android:layout_weight=".50"
            android:layout_width="0dp"
            android:layout_height="50dp" />
    </LinearLayout>

</android.support.percent.PercentRelativeLayout>