<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".views.Register">

    <LinearLayout
        android:id="@+id/layout_toolbar"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:id="@+id/lbl_title"
            android:text="@string/title_register"
            android:textSize="24sp"
            android:textColor="@color/icons"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight=".70"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_body"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/username_dark"
                app:mtf_openKeyboardOnFocus="true"
                app:mtf_cardCollapsedHeight="4dp"
                app:mtf_labelColor="@color/icons">
                <EditText
                    android:id="@+id/txt_username"
                    android:inputType="text"
                    android:hint="@string/register_username"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHighlight="@color/icons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.github.florent37.materialtextfield.MaterialTextField>
            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/email_circle_dark"
                app:mtf_openKeyboardOnFocus="true"
                app:mtf_cardCollapsedHeight="4dp"
                app:mtf_labelColor="@color/icons">
                <EditText
                    android:id="@+id/txt_email"
                    android:inputType="textEmailAddress"
                    android:hint="@string/register_email"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHighlight="@color/icons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.github.florent37.materialtextfield.MaterialTextField>
            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/pass_circle_dark"
                app:mtf_openKeyboardOnFocus="true"
                app:mtf_cardCollapsedHeight="4dp"
                app:mtf_labelColor="@color/icons">
                <EditText
                    android:id="@+id/txt_password"
                    android:inputType="textPassword"
                    android:hint="@string/register_password"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHighlight="@color/icons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.github.florent37.materialtextfield.MaterialTextField>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_footer"
        android:orientation="vertical"
        android:layout_below="@+id/layout_body"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/but_register"
            android:text="@string/register_question"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:paddingLeft="2dp"
            android:drawableLeft="@drawable/ic_icon_mini"
            android:drawablePadding="-10dp"
            android:background="@drawable/but_background_white"
            android:layout_width="300dp"
            android:layout_height="match_parent" />
        <LinearLayout
            android:id="@+id/layout_separator"
            android:gravity="center"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_weight=".45"
                android:background="@color/icons"
                android:layout_width="0dp"
                android:layout_height="1dp"/>
            <TextView
                android:text="@string/login_or_login_social"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_weight=".45"
                android:background="@color/icons"
                android:layout_width="0dp"
                android:layout_height="1dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/but_register_facebook"
            android:text="@string/register_sing_up"
            android:textSize="20sp"
            android:textColor="@color/icons"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            android:background="@drawable/but_pressed_facebook"
            android:drawableLeft="@drawable/ic_facebook_mini"
            android:layout_width="300dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <View
            android:background="@color/iconsAccent"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <Button
            android:id="@+id/but_register_with_us"
            android:text="@string/register_login"
            android:textSize="18sp"
            android:textColor="@color/icons"
            android:textAllCaps="false"
            android:background="@drawable/but_pressed_background"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_social"
        android:layout_below="@+id/layout_footer"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.facebook.login.widget.LoginButton
            android:id="@+id/register_button_facebook"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>
