<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.DetailPost"
    tools:showIn="@layout/activity_post">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_user"
                android:src="@drawable/com_facebook_profile_picture_blank_square"
                android:scaleType="centerCrop"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="8dp"
                app:border_width="2dp"
                app:border_color="@color/colorPrimaryLight"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/lbl_fullname_user"
                android:text="@string/register_username"
                android:layout_toRightOf="@+id/avatar_user"
                android:layout_alignParentTop="true"
                android:textSize="20sp"
                android:textColor="@color/primary_text"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/lbl_username_author"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/post_username"
                android:layout_toRightOf="@+id/avatar_user"
                android:layout_below="@+id/lbl_fullname_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <TextView
            android:id="@+id/lbl_post_question"
            android:text="@string/texto"
            android:textColor="@color/question_text"
            android:textSize="17sp"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/lbl_created_date"
            android:gravity="right"
            android:text="@string/app_title"
            android:textSize="13sp"
            android:textColor="@color/secondary_text"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:background="@color/com_facebook_button_background_color_disabled"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
