<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seekarc="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="6dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_question"
        android:text="@string/appbar_scrolling_view_behavior"
        android:textColor="@color/primary_text"
        android:textSize="21sp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:background="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layout_options_answers"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:id="@+id/frame_seekbar"
                android:visibility="gone"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.triggertrap.seekarc.SeekArc
                    android:id="@+id/seekbar"
                    android:padding="30dp"
                    seekarc:arcColor="@color/colorPressed"
                    seekarc:clockwise="true"
                    seekarc:max="10"
                    seekarc:progressColor="@color/colorPrimary"
                    seekarc:progressWidth="20dp"
                    seekarc:startAngle="0"
                    seekarc:touchInside="true"
                    seekarc:arcWidth="20dp"
                    android:layout_gravity="center"
                    android:layout_width="250dp"
                    android:layout_height="250dp" />
                <TextView
                    android:id="@+id/lbl_progress_seekarc"
                    android:gravity="center"
                    android:text="@string/number_bar"
                    android:textSize="95sp"
                    android:textColor="@color/colorAccentLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <View
        android:background="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/but_cancel"
            style="@style/material_button_dark"
            android:text="@string/dialog_answer_cancel"
            android:textColor="@color/primary_text"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
        <android.support.v4.widget.Space
            android:layout_width="40dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/but_send"
            style="@style/material_button"
            android:text="@string/dialog_answer_accept"
            android:textColor="@color/icons"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </LinearLayout>

</LinearLayout>